--- a/app/views/courses/funding-type.njk
+++ b/app/views/courses/funding-type.njk
@@ -2,7 +2,7 @@
 
 {% set title = "Is it fee paying or salaried?" %}
 
-{% if course %}
+{% if course.id %}
   {% set caption = course.name + " (" + course.code + ")" %}
 {% else %}
   {% set caption = "Add course" %}
@@ -49,7 +49,7 @@
           items: fundingTypeOptions
         }) }}
 
-        {% if course %}
+        {% if course.id %}
           {{ govukButton({
             text: "Update funding type"
           }) }}
