--- a/app/views/courses/apprenticeship.njk
+++ b/app/views/courses/apprenticeship.njk
@@ -2,7 +2,7 @@
 
 {% set title = "Is this a teaching apprenticeship?" %}
 
-{% if course %}
+{% if course.id %}
   {% set caption = course.name + " (" + course.code + ")" %}
 {% else %}
   {% set caption = "Add course" %}
@@ -49,7 +49,7 @@
           items: apprenticeshipOptions
         }) }}
 
-        {% if course %}
+        {% if course.id %}
           {{ govukButton({
             text: "Update apprenticeship"
           }) }}
