--- a/app/views/courses/modern-languages.njk
+++ b/app/views/courses/modern-languages.njk
@@ -2,7 +2,7 @@
 
 {% set title = "Pick all the languages for this course" %}
 
-{% if course %}
+{% if course.id %}
   {% set caption = course.name + " (" + course.code + ")" %}
 {% else %}
   {% set caption = "Add course" %}
@@ -49,7 +49,7 @@
           items: subjectOptions
         }) }}
 
-        {% if course %}
+        {% if course.id %}
           {{ govukButton({
             text: "Update subjects"
           }) }}
