--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -113,24 +113,7 @@
                 }
               ]
             }
-          },
-          {
-            key: {
-              text: "Modern language" + ("s" if course.childSubject > 1)
-            },
-            value: {
-              html: childSubjectHtml
-            },
-            actions: {
-              items: [
-                {
-                  href: actions.change + "/modern-language?referrer=details",
-                  text: "Change",
-                  visuallyHiddenText: "modern language"
-                }
-              ]
-            }
-          } if course.subject == 'ML',
+          } if course.subjectLevel != "further_education",
           {
             key: {
               text: "Age range"
@@ -147,7 +130,7 @@
                 }
               ]
             }
-          },
+          } if course.subjectLevel != "further_education",
           {
             key: {
               text: "Qualification"
@@ -249,13 +232,13 @@
                 }
               ]
             }
-          },
+          } if not organisation.isAccreditedBody,
           {
             key: {
               text: "Applications open date"
             },
             value: {
-              text: (course.applicationsOpenDate if course.applicationsOpenDate != "other" else course.applicationsOpenDateOther) | date("d MMMM yyyy")
+              text: "As soon as the course is on Find" if course.applicationsOpenDate != "other" else course.applicationsOpenDateOther | date("d MMMM yyyy")
             },
             actions: {
               items: [
