Fix auth page titles

--- a/app/views/auth/index.njk
+++ b/app/views/auth/index.njk
@@ -7,7 +7,7 @@
 {% endif %}
 
 {% block pageTitle %}
-{{ 'Error: ' if errors.length}} {{- title }} – {{ serviceName }} – GOV.UK
+{{ "Error: " if errors.length }}{{ title + " - " if title }}{{ caption + " - " if caption }}{{ serviceName }} - GOV.UK
 {% endblock %}
 
 {% block content %}
