--- a/app/views/auth/register.njk
+++ b/app/views/auth/register.njk
@@ -3,7 +3,7 @@
 {% set title = "Create a DfE Sign-in account"  %}
 
 {% block pageTitle %}
-{{ 'Error: ' if errors.length}} {{- title }} – {{ serviceName }} – GOV.UK
+{{ "Error: " if errors.length }}{{ title + " - " if title }}{{ caption + " - " if caption }}{{ serviceName }} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
