--- a/app/views/courses/financial-support.njk
+++ b/app/views/courses/financial-support.njk
@@ -4,7 +4,7 @@
 {% set caption = course.name + " (" + course.code + ")" %}
 
 {% block pageTitle %}
-  ("Error: " if errors) + {{ title + " - " if title }}{{ caption + " - " if caption }}{{ serviceName }} - GOV.UK
+  {{ "Error: " if errors.length }}{{ title + " - " if title }}{{ caption + " - " if caption }}{{ serviceName }} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
