Fix location page titles

--- a/app/views/locations/delete.njk
+++ b/app/views/locations/delete.njk
@@ -4,7 +4,7 @@
 {% set caption = location.name %}
 
 {% block pageTitle %}
-  ("Error: " if errors) + {{ title + " - " if title }}{{ caption + " - " if caption }}{{ serviceName }} - GOV.UK
+  {{ "Error: " if errors.length }}{{ title + " - " if title }}{{ caption + " - " if caption }}{{ serviceName }} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
