--- a/app/views/courses/check-your-answers.njk
+++ b/app/views/courses/check-your-answers.njk
@@ -171,7 +171,7 @@
                   }
                 ]
               }
-            },
+            } if not organisation.isAccreditedBody,
             {
               key: {
                 text: "Full time or part time"
