--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -181,7 +181,7 @@
                 }
               ]
             }
-          },
+          } if not organisation.isAccreditedBody,
           {
             key: {
               text: "Full time or part time"
