--- a/app/views/courses/description.njk
+++ b/app/views/courses/description.njk
@@ -143,7 +143,7 @@
           },
           {
             key: {
-              text: "Fee for UK student"
+              text: "Fee for UK students"
             },
             value: {
               text: "£" + course.feesUK | numeral('0,0.[00]') if course.feesUK else "Not entered",
