--- a/app/views/courses/check-your-answers.njk
+++ b/app/views/courses/check-your-answers.njk
@@ -225,6 +225,40 @@
             } if not organisation.isAccreditedBody,
             {
               key: {
+                text: "Can candidates get a sponsored Student visa?"
+              },
+              value: {
+                text: course.canSponsorStudentVisa | getStudentVisaLabel
+              },
+              actions: {
+                items: [
+                  {
+                    href: actions.change + "/visa-sponsorship?referrer=check",
+                    text: "Change",
+                    visuallyHiddenText: "if candidates can get a sponsored Student visa"
+                  }
+                ]
+              }
+            } if course.fundingType == "fee",
+            {
+              key: {
+                text: "Can candidates get a sponsored Skilled Worker visa?"
+              },
+              value: {
+                text: course.canSponsorSkilledWorkerVisa | getSkilledWorkerVisaLabel
+              },
+              actions: {
+                items: [
+                  {
+                    href: actions.change + "/visa-sponsorship?referrer=check",
+                    text: "Change",
+                    visuallyHiddenText: "if candidates can get a sponsored Skilled Worker visa"
+                  }
+                ]
+              }
+            } if course.fundingType == "salary",
+            {
+              key: {
                 text: "Applications open date"
               },
               value: {
