Update check your answers title

--- a/app/views/courses/check-your-answers.njk
+++ b/app/views/courses/check-your-answers.njk
@@ -1,7 +1,7 @@
 {% extends "_layout.njk" %}
 
 {% set caption = "Add course" %}
-{% set title = "Check your answers before confirming" %}
+{% set title = "Check your answers" %}
 
 {% block beforeContent %}
 {{ govukBackLink({
