Show skilled worker visa question for apprenticeship

--- a/app/views/courses/visa-sponsorship.njk
+++ b/app/views/courses/visa-sponsorship.njk
@@ -62,7 +62,7 @@
             items: visaOptions
           }) }}
 
-        {% elif course.fundingType == "salary" %}
+        {% elif course.fundingType in ["salary","apprenticeship"] %}
 
           {{ govukRadios({
             idPrefix: "visa-sponsorship",
