Show skilled worker answer for salary and apprenticeship

--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -266,7 +266,7 @@
                 }
               ]
             }
-          } if course.fundingType == "salary",
+          } if course.fundingType != "fee",
           {
             key: {
               text: "Applications open date"
