--- a/app/views/courses/accredited-body.njk
+++ b/app/views/courses/accredited-body.njk
@@ -37,63 +37,17 @@
 
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
 
-        <div class="govuk-form-group {{ 'govuk-form-group--error' if errors }}">
-
-          {% call govukFieldset({
+        {{ govukRadios({
+          idPrefix: "accredited-body",
+          name: "course[accreditedBody]",
+          fieldset: {
             legend: {
               html: headingHtml
             }
-          }) %}
-
-          {% if errors %}
-            <span id=" accredited-body-error" class="govuk-error-message">
-              <div><span class="govuk-visually-hidden">Error:</span> Enter an accredited body</div>
-            </span>
-          {% endif %}
-
-          <div class="govuk-radios" data-module="govuk-radios">
-            {% for option in accreditedBodyOptions %}
-              {% if option.divider %}
-                <div class="govuk-radios__divider">{{ option.divider }}</div>
-              {% else %}
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="{{ option.id }}" name="course[accreditedBody]" type="radio" value="{{ option.value }}" {{ option.checked }} {% if option.conditional %}data-aria-controls="conditional-{{ option.id }}"{% endif %}>
-                  <label class="govuk-label govuk-radios__label" for="{{ option.id }}">
-                    {{- option.text -}}
-                  </label>
-                </div>
-                {% if option.conditional %}
-                  <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-{{ option.id }}">
-
-                    {{ appAutocompleteFromSelect({
-                      id: "accredited-body-other",
-                      name: "course[accreditedBodyOther]",
-                      label: {
-                        text: "Accredited body",
-                        classes: "govuk-label--s"
-                      },
-                      hint: {
-                        text: "Search for a provider name or code"
-                      },
-                      classes: "govuk-!-width-two-thirds",
-                      items: accreditedBodies,
-                      value: data.course.accreditedBodyOther[1],
-                      autocompleteOptions: {
-                        autoselect: true,
-                        showAllValues: false,
-                        allowEmpty: true
-                      }
-                    }) }}
-
-                  </div>
-                {% endif %}
-              {% endif %}
-            {% endfor %}
-          </div>
-
-          {% endcall %}
-
-        </div>
+          },
+          errorMessage: errors | getErrorMessage("accredited-body"),
+          items: accreditedBodyOptions
+        }) }}
 
         {% if course.id %}
           {{ govukButton({
