--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -214,7 +214,7 @@
                   visuallyHiddenText: "location"
                 }
               ]
-            }
+            }if course.locations.length > 1
           },
           {
             key: {
@@ -266,7 +266,7 @@
                 }
               ]
             } if course.status == "0"
-          } if course.fundingType != "fee",
+          } if course.fundingType in ["salary", "apprenticeship"],
           {
             key: {
               text: "Applications open date"
