--- a/app/views/courses/check-your-answers.njk
+++ b/app/views/courses/check-your-answers.njk
@@ -143,7 +143,7 @@
                 text: "Teaching apprenticeship"
               },
               value: {
-                text: course.apprenticeship | capitalize
+                text: course.fundingType | getApprenticeshipLabel
               },
               actions: {
                 items: [
@@ -154,7 +154,7 @@
                   }
                 ]
               }
-            } if course.apprenticeship,
+            } if organisation.isAccreditedBody,
             {
               key: {
                 text: "Funding type"
@@ -256,7 +256,7 @@
                   }
                 ]
               }
-            } if course.fundingType == "salary",
+            } if course.fundingType in ["salary","apprenticeship"],
             {
               key: {
                 text: "Applications open date"
