--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -153,7 +153,7 @@
               text: "Teaching apprenticeship"
             },
             value: {
-              text: course.apprenticeship | capitalize
+              text: course.fundingType | getApprenticeshipLabel
             },
             actions: {
               items: [
@@ -164,7 +164,7 @@
                 }
               ]
             } if course.status == "0"
-          } if course.apprenticeship,
+          } if organisation.isAccreditedBody,
           {
             key: {
               text: "Funding type"
@@ -214,7 +214,7 @@
                   visuallyHiddenText: "location"
                 }
               ]
-            }if course.locations.length > 1
+            } if course.locations.length > 1
           },
           {
             key: {
