Fix locations change link

--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -214,7 +214,7 @@
                   visuallyHiddenText: "location"
                 }
               ]
-            } if course.locations.length > 1
+            } if locations.length > 1
           },
           {
             key: {
