Update submit button label

--- a/app/views/courses/modern-languages.njk
+++ b/app/views/courses/modern-languages.njk
@@ -51,7 +51,7 @@
 
         {% if course.id %}
           {{ govukButton({
-            text: "Update subjects"
+            text: "Update languages"
           }) }}
         {% else %}
           {{ govukButton({
