--- a/app/views/organisations/details.njk
+++ b/app/views/organisations/details.njk
@@ -218,7 +218,7 @@
         ]
       }) }}
 
-      {% if organisation.type != "lead_school" %}
+      {% if organisation.type in ["hei","scitt"] %}
 
         <h2 class="govuk-heading-m govuk-!-margin-top-9">Visa sponsorship</h2>
 
@@ -239,7 +239,7 @@
                     visuallyHiddenText: "if candidates get a sponsored Student visa for your fee-paying courses"
                   }
                 ]
-              }
+              } if organisation.type == "hei"
             },
             {
               key: {
