Update visa change links

--- a/app/views/organisations/details.njk
+++ b/app/views/organisations/details.njk
@@ -234,7 +234,7 @@
               actions: {
                 items: [
                   {
-                    href: actions.change + "/visa-sponsorship",
+                    href: actions.change + "/student-visa",
                     text: "Change",
                     visuallyHiddenText: "if candidates get a sponsored Student visa for your fee-paying courses"
                   }
@@ -251,7 +251,7 @@
               actions: {
                 items: [
                   {
-                    href: actions.change + "/visa-sponsorship",
+                    href: actions.change + "/skilled-worker-visa",
                     text: "Change",
                     visuallyHiddenText: "if candidates get a sponsored Skilled Worker visa for your salaried courses"
                   }
