Update visa sponsorship flow depending on what's changed

--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -235,7 +235,7 @@
           } if not organisation.isAccreditedBody,
           {
             key: {
-              text: "Can candidates get a sponsored Student visa?"
+              text: "Student visa"
             },
             value: {
               text: course.canSponsorStudentVisa | getStudentVisaLabel
@@ -252,7 +252,7 @@
           } if course.fundingType == "fee",
           {
             key: {
-              text: "Can candidates get a sponsored Skilled Worker visa?"
+              text: "Skilled Worker visa"
             },
             value: {
               text: course.canSponsorSkilledWorkerVisa | getSkilledWorkerVisaLabel
