--- a/app/views/courses/check-your-answers.njk
+++ b/app/views/courses/check-your-answers.njk
@@ -225,7 +225,7 @@
             } if not organisation.isAccreditedBody,
             {
               key: {
-                text: "Can candidates get a sponsored Student visa?"
+                text: "Student visa"
               },
               value: {
                 text: course.canSponsorStudentVisa | getStudentVisaLabel
@@ -242,7 +242,7 @@
             } if course.fundingType == "fee",
             {
               key: {
-                text: "Can candidates get a sponsored Skilled Worker visa?"
+                text: "Skilled Worker visa"
               },
               value: {
                 text: course.canSponsorSkilledWorkerVisa | getSkilledWorkerVisaLabel
