--- a/app/views/courses/check-your-answers.njk
+++ b/app/views/courses/check-your-answers.njk
@@ -228,7 +228,7 @@
                 text: "Student visa"
               },
               value: {
-                text: course.canSponsorStudentVisa | getStudentVisaLabel
+                text: course.canSponsorStudentVisa | getStudentVisaLabel + (" - can sponsor" if course.canSponsorStudentVisa == "yes" else " - cannot sponsor")
               },
               actions: {
                 items: [
@@ -245,7 +245,7 @@
                 text: "Skilled Worker visa"
               },
               value: {
-                text: course.canSponsorSkilledWorkerVisa | getSkilledWorkerVisaLabel
+                text: course.canSponsorSkilledWorkerVisa | getSkilledWorkerVisaLabel + (" - can sponsor" if course.canSponsorSkilledWorkerVisa == "yes" else " - cannot sponsor")
               },
               actions: {
                 items: [
