--- a/app/views/organisations/skilled-worker-visa.njk
+++ b/app/views/organisations/skilled-worker-visa.njk
@@ -24,7 +24,8 @@
         {{ title }}
       </h1>
 
-      {% set helpHtml %}
+      {% if query.show and query.show == "help" %}
+
         <p class="govuk-body">
           Non-UK teacher training candidates need the correct visa or immigration status to work or study in England.
         </p>
@@ -36,18 +37,6 @@
         <p class="govuk-body">
           <a class="govuk-link" href="https://www.gov.uk/guidance/recruit-trainee-teachers-from-overseas-accredited-itt-providers#recruit-by-becoming-a-visa-sponsor">Learn more about visa sponsorship</a>
         </p>
-      {% endset %}
-
-      {% if query.show and query.show in ["true","yes"] %}
-
-        {{ govukDetails({
-          summaryText: "Help with Skilled Worker visas",
-          html: helpHtml
-        }) }}
-
-      {% else %}
-
-        {#{ helpHtml | safe }#}
 
       {% endif %}
 
