--- a/app/views/organisations/student-visa.njk
+++ b/app/views/organisations/student-visa.njk
@@ -24,7 +24,7 @@
         {{ title }}
       </h1>
 
-      {% set helpHtml %}
+      {% if query.show and query.show == "help" %}
         <p class="govuk-body">
           Non-UK teacher training candidates need the correct visa or immigration status to work or study in England.
         </p>
@@ -36,19 +36,6 @@
         <p class="govuk-body">
           <a class="govuk-link" href="https://www.gov.uk/guidance/recruit-trainee-teachers-from-overseas-accredited-itt-providers#recruit-by-becoming-a-visa-sponsor">Learn more about visa sponsorship</a>
         </p>
-      {% endset %}
-
-      {% if query.show and query.show in ["true","yes"] %}
-
-        {{ govukDetails({
-          summaryText: "Help with Student visas",
-          html: helpHtml
-        }) }}
-
-      {% else %}
-
-        {#{ helpHtml | safe }#}
-
       {% endif %}
 
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
