--- a/app/views/organisations/index.njk
+++ b/app/views/organisations/index.njk
@@ -52,6 +52,16 @@
       </ul>
 
       <h2 class="govuk-heading-m">
+        <a class="govuk-link" href="/organisations/{{ organisation.id }}/cycles/2022/users">Users</a>
+      </h2>
+
+      <p class="govuk-body">Use this section to:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>edit users’ permissions</li>
+        <li>invite users to your organisation</li>
+      </ul>
+
+      <h2 class="govuk-heading-m">
         <a class="govuk-link" href="/organisations/{{ organisation.id }}/cycles/2022/courses">Courses</a>
       </h2>
 
