--- a/app/views/users/list.njk
+++ b/app/views/users/list.njk
@@ -1,7 +1,7 @@
 {% extends "_layout.njk" %}
 
 {% set title = "Users" %}
-{% set caption = data.currentCycle.code | getCycleLabel %}
+{#% set caption = data.currentCycle.code | getCycleLabel %#}
 
 {% block beforeContent %}
 {{ govukBackLink({
@@ -18,49 +18,45 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">
-        <span class="govuk-caption-l">
-          {{ caption }}
-        </span>
+        {% if caption.length %}
+          <span class="govuk-caption-l">
+            {{ caption }}
+          </span>
+        {% endif %}
         {{ title }}
       </h1>
 
       {{ govukButton({
-        text: "Add user",
+        text: "Invite user",
         href: actions.new
       }) }}
 
-      {% if users.length %}
-        <table class="govuk-table app-table--vertical-align-middle">
-          <thead class="govuk-table__head">
+      <table class="govuk-table app-table--vertical-align-middle">
+        <thead class="govuk-table__head">
+          <tr class="govuk-table__row">
+            <th class="govuk-table__header govuk-!-width-one-third">Name</th>
+            <th class="govuk-table__header">Email</th>
+            <th class="govuk-table__header">Status</th>
+          </tr>
+        </thead>
+        <tbody class="govuk-table__body">
+          {% for user in users %}
             <tr class="govuk-table__row">
-              <th class="govuk-table__header govuk-!-width-one-third">Name</th>
-              <th class="govuk-table__header">Email</th>
-              <th class="govuk-table__header">Active</th>
+              <td class="govuk-table__cell app-table--courses__course-name">
+                <a class="govuk-link govuk-heading-s govuk-!-margin-bottom-0" href="{{ actions.view }}/{{ user.id }}">
+                  {{ user.firstName }} {{ user.lastName }}
+                </a>
+              </td>
+              <td class="govuk-table__cell">
+                {{ user.email if user.email else "Not entered" }}
+              </td>
+              <td class="govuk-table__cell">
+                {{ "Active" if user.active else "Inactive" }}
+              </td>
             </tr>
-          </thead>
-          <tbody class="govuk-table__body">
-
-            {% for user in users %}
-              <tr class="govuk-table__row">
-                <td class="govuk-table__cell app-table--courses__course-name">
-                  <a class="govuk-link govuk-heading-s govuk-!-margin-bottom-0" href="{{ actions.view }}/{{ user.id }}">
-                    {{ user.firstName }} {{ user.lastName }}
-                  </a>
-                </td>
-                <td class="govuk-table__cell">
-                  {{ user.email if user.email else "Not entered" }}
-                </td>
-                <td class="govuk-table__cell">
-                  {{ user.active }}
-                </td>
-              </tr>
-            {% endfor %}
-          </tbody>
-
-        </table>
-      {% else %}
-        <p class="govuk-body">There are no locations for {{ provider.name if provider.name else "your organisation" }}.</p>
-      {% endif %}
+          {% endfor %}
+        </tbody>
+      </table>
 
     </div>
   </div>
