Update user details display

--- a/app/views/users/details.njk
+++ b/app/views/users/details.njk
@@ -24,6 +24,16 @@
         {{ title }}
       </h1>
 
+      {% set organisationHtml %}
+        <ul class="govuk-list">
+          {% for organisation in user.organisations %}
+            <li>
+              {{ organisation.name }}
+            </li>
+          {% endfor %}
+        </ul>
+      {% endset %}
+
       {{ govukSummaryList({
         rows: [
           {
@@ -48,6 +58,14 @@
             },
             value: {
               text: user.email
+            }
+          },
+          {
+            key: {
+              text: "Organisations"
+            },
+            value: {
+              html: organisationHtml
             }
           }
         ]
