Add your account routes

--- a/app/views/_layout.njk
+++ b/app/views/_layout.njk
@@ -64,7 +64,7 @@
       text: "Notifications",
       active: true if (headerNavId == "notifications")
     } if 1 == 0, {
-      href: "#",
+      href: "/account",
       text: "Your account",
       active: true if (headerNavId == "account")
     }, {
