--- a/app/views/users/list.njk
+++ b/app/views/users/list.njk
@@ -46,6 +46,9 @@
                 <a class="govuk-link govuk-heading-s govuk-!-margin-bottom-0" href="{{ actions.view }}/{{ user.id }}">
                   {{ user.firstName }} {{ user.lastName }}
                 </a>
+                {#% if user.id == passport.user.id %}
+                  <span class="govuk-hint">(You)</span>
+                {% endif %#}
               </td>
               <td class="govuk-table__cell">
                 {{ user.email if user.email else "Not entered" }}
